plate type checkpoint